service-definition.yml
---
  apiVersion: v1
  kind: Service

  metadata:
    name: nginx-service

  spec:
    type: NodePort
    ports:
      - targetport: 80
        port: 80
        nodePort: 30008
    selector:
      app: myapp
      type: front-end
