network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: payroll-policy
  namespace: default
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: internal # Internal pod label
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      name: payroll   # payroll pod label
  policyTypes:
  - Ingress
